--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ button:hover {
   background-color: #4e9ed4;
 }
 
-.calculator-keys {
+#calculator-keys {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 20px;
