--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-  font-size: 60.5%;
+  font-size: 60%;
   box-sizing: border-box;
 }
 
@@ -10,16 +10,20 @@ html {
   padding: 0;
   box-sizing: border-box;
 }
-body {
+
+.container {
+  height: 100vh;
+  width: 80%;
 }
+
 .calculator {
   border: 1px solid #ccc;
   border-radius: 5px;
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 20%; 
+  left: 40%; 
   width: 400px;
-  transform: translate(-50% -50%);
+  transform: translate(-50% -50%); */
 }
 .calculator-screen {
   width: 100%;
